<resources>
    <string name="app_name">BTechApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sp_colors">Цвет</string>
    <string name="sp_memory">Память</string>
    <string name="sp_feedback">Отзыв</string>
    <string name="find_your_gadget">Найди свой гаджет</string>
    <string name="search">искать</string>
    <string name="actual">Актуальное</string>
    <string name="discounts">Скидки</string>
    <string name="top_news">Последние новости</string>
    <string name="popular_categories">Популярные категории</string>
    <string name="lots_of_a_day">Товары дня</string>
    <string name="cost">Цена</string>
    <string name="credit">Рассрочка</string>
    <string name="model">Модель</string>
    <string name="sony">Новое поступление товаров SONY</string>

    <string-array name="Memory">
        <item>64 GB</item>
        <item>128 GB</item>
        <item>256 GB</item>
    </string-array>
</resources>