<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#2E3C85"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_find_your_gadget"
            android:layout_width="228dp"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/find_your_gadget"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_shape"
            android:drawableEnd="@drawable/ic_search"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:paddingStart="10dp"
            android:shadowRadius="8" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/actual"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

    <TextView
        android:id="@+id/text_view_discounts"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_view_shape"
        android:fontFamily="@font/roboto_regular"
        android:padding="10dp"
        android:text="@string/discounts"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_actual" />

    <TextView
        android:id="@+id/text_view_top_news"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_view_shape"
        android:fontFamily="@font/roboto_regular"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/top_news"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/text_view_discounts"
        app:layout_constraintTop_toBottomOf="@+id/text_view_actual" />

    <TextView
        android:id="@+id/text_view_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/popular_categories"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_discounts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_popular"
        tools:listitem="@layout/item_horizontal" />

    <TextView
        android:id="@+id/text_view_lots_of_a_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/lots_of_a_day"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_horizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_lots_of_a_day"
        app:spanCount="2"
        tools:listitem="@layout/item_vertical" />

</androidx.constraintlayout.widget.ConstraintLayout>