<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="116dp"
        android:layout_height="110dp"
        android:layout_margin="8dp"
        android:src="@drawable/lot_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_like"
        android:layout_width="18dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_like"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="@+id/image_view" />

    <TextView
        android:id="@+id/text_view_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/text_view_shape2"
        android:fontFamily="@font/roboto_regular"
        android:padding="3dp"
        android:text="@string/credit"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <TextView
        android:id="@+id/text_view_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="3dp"
        android:text="@string/model"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_credit"
        app:layout_constraintStart_toStartOf="@+id/text_view_credit"
        app:layout_constraintTop_toBottomOf="@+id/text_view_credit" />

    <TextView
        android:id="@+id/text_view_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="3dp"
        android:text="@string/cost"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_view_model"
        app:layout_constraintTop_toBottomOf="@+id/text_view_model" />

</androidx.constraintlayout.widget.ConstraintLayout>